--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -58,13 +58,22 @@ jwt.expiration=604800
 jwt.tokenHead=Bearer
 
 
+# Elasticsearch
+spring.data.elasticsearch.repositories.enabled=true
+#es连接地址和端口
+spring.data.elasticsearch.cluster-nodes=127.0.0.1:9300
+#es集群名称
+spring.data.elasticsearch.cluster-name=elasticsearch
 
 
 
 
 
 
-  mybatis.mapper-locations=classpath:mapper/*.xml,classpath*:com/**/mapper/*.xml
+
+
+
+mybatis.mapper-locations=classpath:mapper/*.xml,classpath*:com/**/mapper/*.xml
 
 
 
