新增elastic search相关注释

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -60,7 +60,7 @@ jwt.tokenHead=Bearer
 
 # Elasticsearch
 spring.data.elasticsearch.repositories.enabled=true
-#es连接地址和端口
+#es连接地址和端口 这个端口号不要和elasticsearch端口一致（elasticsearch 默认启动端口是9200）
 spring.data.elasticsearch.cluster-nodes=127.0.0.1:9300
 #es集群名称
 spring.data.elasticsearch.cluster-name=elasticsearch
