--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -67,6 +67,13 @@ spring.data.elasticsearch.cluster-name=elasticsearch
 
 
 
+# mongoDB相关配置
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=mall-port
+
+
+
 
 
 
