--- a/pom.xml
+++ b/pom.xml
@@ -115,7 +115,11 @@
             <version>0.9.0</version>
         </dependency>
 
-
+    <!-- mongoDB -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-mongodb</artifactId>
+        </dependency>
 
 
 
